[gd_scene load_steps=7 format=2]

[ext_resource path="res://Elements/StaticBody.gd" type="Script" id=1]
[ext_resource path="res://Elements/Magnet/Magnet.gd" type="Script" id=2]
[ext_resource path="res://Magnet.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 40.0

[sub_resource type="CircleShape2D" id=2]
radius = 250.0

[sub_resource type="CircleShape2D" id=3]
radius = 40.0

[node name="Magnet" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 1 )

[node name="DetectingArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectingArea"]
shape = SubResource( 2 )

[node name="ClickArea" type="Area2D" parent="."]
collision_layer = 524288
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickArea"]
shape = SubResource( 3 )

[connection signal="body_entered" from="DetectingArea" to="." method="_on_DetectingArea_body_entered"]
[connection signal="body_exited" from="DetectingArea" to="." method="_on_DetectingArea_body_exited"]
[connection signal="mouse_entered" from="ClickArea" to="." method="_on_ClickArea_mouse_entered"]
[connection signal="mouse_exited" from="ClickArea" to="." method="_on_ClickArea_mouse_exited"]
